[package]
name = "owasm-std"
version = "0.10.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Shulepov <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-std"
homepage = "https://github.com/oasislabs/owasm-std"
documentation = "https://paritytech.github.io/pwasm-std/pwasm_std/"
description = "Parity WebAssembly standard library for contract development"
keywords = ["wasm", "parity", "webassembly", "blockchain"]
categories = ["no-std", "embedded"]
exclude = [ "demo/*" ]

[dependencies]
owasm-alloc = { path = "alloc", version = "0.4" }
owasm-libc = { path = "libc", version = "0.2" }
tiny-keccak = "1"

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[features]
default = []
std = ["parity-hash/std"]
strict = ["owasm-libc/strict", "owasm-alloc/strict"]
panic_with_msg = []
